[tool.poetry]
name = "bot-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "bot_test" }]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.2"
opencv-python = "^4.7.0.72"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
